--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -14,7 +14,7 @@
 - GitHub：https://github.com/yangchong211
 - 目前工作情况：在职状态(滴滴RLab事业部)
 - 技术项目和博客：GitHub项目17k以上star，follower2k以上，发表博客150多篇。
-- 教育经历：武汉软件工程学院，计算机专业；武汉理工大学(成考)
+- 教育经历：武汉软件工程学院，计算机专业
 
 
 ### 2.专业技能
@@ -54,7 +54,7 @@
 
 
 ### 4.工作经历
-#### 4.1 2021年3月份到现在
+#### 4.1 2020年4月份到现在
 - 负责滴滴RLab外卖骑手端App开发
     - 1.对地图原生业务优化，主要是组件分化，极大解决类业务臃肿问题，不断完善，提高代码阅读性和可维护性。
     - 2.负责外卖骑手端App中地图模块，导航模块，行程模块等相关的业务。开发无延期，确保自测质量，线上事故<3全年。
@@ -63,19 +63,7 @@
 
 
 
-#### 4.2 2020年4月到2021年3月份
-- 负责立思辰教育旗下诸葛书/豆神学习机/豆神直播课开发迭代
-    - 1.组件化开发项目，负责项目业务沟通，项目排期，进度把控等。
-    - 2.负责项目基础搭建工作，拆分业务组件，服务组件，功能组件，基础组件，完善项目组件化，分离和复用。
-    - 3.针对多个app视频播放器进行改造，搭建一套可以切换内核，业务解耦合，高拓展性通用视频播放器，用于4个项目。
-- 负责中间组件开发【公共库】
-    - 1.针对kindle或者平板学习项目开发通用崩溃重启和崩溃日志记录库，用于2个项目。
-    - 2.通用网络拦截助手工具开发，方便项目查看页面网络请求日志，请求耗时，流量统计，弱网模拟。
-    - 3.组件化项目之间业务组件通信，使用apt生成代码简化注册流程，提高组件通信交互能力，减少开发手动设置接口通信导致的错误。
-
-
-
-#### 4.3 2018年7月到2020年3月
+#### 4.2 2018年7月到2020年3月
 - 负责大搜车旗下一鹿有车项目开发迭代【从0到1，百万级应用】
 - 一鹿有车Android开发经历
     - 1.重构项目，主导进行MVP架构的更改，以及技术选型方案的商讨和制定。封装公共组件和基础base类，统一项目中弹窗，页面状态管理切换，网络请求等。
@@ -88,7 +76,7 @@
 
 
 
-#### 4.4 2015年9月到2018年7月
+#### 4.3 2015年9月到2018年7月
 - 工作阶段
     - 第一阶段：投资界NWD部门(15年9月-17年11月)，对于投资界App(新闻类)，负责代码架构优化，迭代；对于新芽App(资讯工具类)，负责新芽客户端独立开发工作。
     - 第二阶段：清科创业IMC部分(17年11月-18年7月)，负责开发沙丘大学App(知识付费视频播放类)。
