--- a/Read/ReadMeWiki/00.方案实践/28.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/28.App磁盘沙盒工具实践.md
@@ -476,7 +476,7 @@
     <!--android:name 这个值是固定的，表示要解析file_path-->
     <!--android:resource 自己定义实现的映射表-->
     <provider
-        android:name="com.yc.appfilelib.ExplorerProvider"
+        android:name="com.yc.appmediastore.ExplorerProvider"
         android:authorities="${applicationId}.fileExplorerProvider"
         android:exported="false"
         android:grantUriPermissions="true">
