--- a/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
@@ -15,6 +15,22 @@
 
 
 
+### 03.IO流知识问题
+- 什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
+- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？
+- 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
+- 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
+- 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
+- 流一般需要不需要关闭，如果关闭的话在用什么方法，一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
+- 什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
+
+
+
+
+
+
+
+
 ### 1.Java基础之面试问题
 ### 1.1.1 Java基础之基础问题
 #### 1.1.1.1 String类
@@ -114,19 +130,9 @@
 - 如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？数组和链表数据结构描述，各自的时间复杂度？
 
 
-### 1.1.4 Java基础之IO流
-#### 1.1.4.1 IO流
-- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？
-- 为了提高读写性能，可以采用什么流？
-- 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？
-- 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
-- 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
 
-#### 1.1.4.2 其他
 - 如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
-- 什么是比特(Bit),什么是字节(Byte),什么是字符(Char),它们长度是多少,各有什么区别？
-- 流一般需要不需要关闭,如果关闭的话在用什么方法,一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
-- 什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
+
 
 
 ### 1.1.5 Java基础之多线程
