--- a/Read/ReadMeWiki/09.问题思考/05.网络相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/05.网络相关问题汇总.md
@@ -5,6 +5,23 @@
 - 03.网络其他问题汇总
 
 
+### 01.Http和Https问题
+- 说一下http和HTTPS的区别？HTTPS工作原理是什么？https相关，如何验证证书的合法性？
+- 什么是Http协议无状态协议?怎么解决Http协议无状态协议?
+- 常用的HTTP方法有哪些？post和get请求有什么区别？实际开发中涉及账号登录使用哪种请求？
+- HTTPS 是怎么做加密的？https中哪里用了对称加密，哪里用了非对称加密，对加密算法（如RSA）等是否有了解?
+- Http的request和response的协议组成？说一下 HTTP 协议请求头我们常用的3个字段
+- Https请求慢的解决办法，DNS，携带数据，直接访问IP？Http位于TCP/IP模型中的第几层？为什么说Http是可靠的数据传输协议？
+
+
+
+### 02.TCP/UDP和IP
+- HTTP通信机制需要经历那些步骤？TCP和UDP有什么区别？
+- TCP 的 3 次握手和四次挥手，说一下这个过程？为什么不能两次握手呢？要三次？client如何确定自己发送的消息被server收到?
+- TCP可靠传输原理实现？如何TCP拥塞控制？TCP如何流量控制？
+- 什么是socket？socket选项 TCP NO DELAY 是指什么？Socket 工作在 TCP/IP 协议栈是哪一层？
+
+
 
 ### 03.网络其他问题汇总
 - 网络：浏览器输入域名后，后续的过程。DNS的细节（先从本机开始）。
