--- a/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/01.Java相关问题汇总.md
@@ -14,33 +14,10 @@
 
 
 
-
-### 03.IO流知识问题
-- 什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
-- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？
-- 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
-- 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
-- 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
-- 流一般需要不需要关闭，如果关闭的话在用什么方法，一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
-- 什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
-
-
-
-
-
-
-
-
-### 1.Java基础之面试问题
-### 1.1.1 Java基础之基础问题
-#### 1.1.1.1 String类
+### 01.基础问题汇总
 - 请说下String与StringBuffer区别，StringBuffer底部如何实现？String类可以被继承吗，为什么？String为什么要设计成不可变的？
 - String类可以new出来吗？String s1=new String("abc")在内存创建了几个对象？
 - String是不可变的有什么好处？如何分割一个String？什么是字符串池？String是线程安全的吗？为什么我们在使用HashMap的时候总是用String做key？
-- 为什么 Java 中的 String 是不可变的（Immutable）？如何构建不可变的类结构？关键点在哪里？
-
-
-#### 1.1.1.2 基本类型
 - int、char、long各占多少字节数？比如double强转int类型会造成精度损失，为什么？
 - 一个int变量，用volatile修饰，多线程去操作++，线程安全吗？那如何才能保证i++线程安全？不用锁如何保证int自增安全？
 - int,long的取值范围以及BigDecimal，数值越界了如何处理？
@@ -48,40 +25,20 @@
 - int 和 Integer 哪个会占用更多的内存？ int 和 Integer 有什么区别？parseInt()函数在什么时候使用到？
 - char 型变量中能不能存贮一个中文汉字，为什么？
 - 将 int 强制转换为 byte 类型的变量吗？如果该值大于 byte 类型的范围，将会出现什么现象？
-
-
-#### 1.1.1.3 泛型
 - 什么是泛型，泛型主要有哪些应用场景？如何获取泛型的真实参数类型？具体是怎么操作的？
 - 泛型通配符，上界或者下届包含自己吗？如何理解泛型擦除这个概念？泛型擦除会有哪些影响？
 - 那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？
 - 如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<?>和List<Object>之间的区别是什么?
 
 
-#### 1.1.1.4 其他
-- 请手写equal方法，讲讲具体的原理？手写代码……
-- 为什么复写equals方法的同时需要复写hashcode方法，前者相同后者是否相同，反过来呢？为什么？
-- 静态属性和静态方法是否可以被继承？是否可以被重写？以及原因？
-- 什么是内部类？内部类的作用有哪些？静态内部类的设计意图，成员内部类、静态内部类、局部内部类和匿名内部类的理解，以及项目中的应用？
-- 可重入锁的实现，公平锁非公平锁都是什么定义？
-- final修饰一个对象，能否调用对象修改属性的方法
-- 静态内部类为什么能保证单例，JVM是如何实现的
-- 为什么内部类调用的外部变量必须是final修饰的？final的作用是什么，被final修饰的类，可以改变类里面的属性吗？ final, finally, finalize 的区别？
-- try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的 code 会不会被执行，什么时候被执行，在 return 前还是后?
-- 静态代码块什么时候执行？它的用途主要是做什么用的？它和构造方法哪一个先执行？
-- 访问修饰符public,private,protected,以及不写（默认）时的区别？相同一个工程中，可以导入不同项目的包吗？
 
-
-
-### 1.1.2 Java基础之面向对象
-#### 1.1.2.1 多态，继承，封装
+### 02.面向对象问题
 - Java实现多态有哪些必要条件？具体怎么实现？多态的实现原理？多态的作用？
 - 重载（overloading）与重写（override）的区别? 重载的方法能否根据返回类型进行区分？继承最大好处?构造器 Constructor 是否可被 Override?
 - Java 中，什么是构造函数?什么是构造函数重载?什么是复制构造函数?
 - 继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
 - 如果类 a 继承类 b，实现接口c，而类 b 和接口 c 中定义了同名变量，请问会出现什么问题？
-
-
-#### 1.1.2.2 其他
+- 如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
 - 接口和抽象类有什么区别？为什么要这样设计？
 - 如何声名一个静态块？静态块有什么好处？静态块和构造方法哪一个先执行？
 - 接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
@@ -94,23 +51,28 @@
 
 
 
-### 1.1.3 Java基础之数据结构
-#### 1.1.3.1 List
+
+
+### 03.IO流知识问题
+- 什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
+- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？
+- 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
+- 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
+- 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
+- 流一般需要不需要关闭，如果关闭的话在用什么方法，一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
+- 什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
+
+
+
+### 04.数据结构问题
 - 什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
 - ArrayList 和 Vector 的区别？ArrayList 和 Vector 的存储空间是如何扩容的？什么是加载因子？
 - ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
 - Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
 - LinkedList 是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
-
-
-
-#### 1.1.3.2 Set
 - HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？Collections工具类中的sort()方法如何比较元素？
 - Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别?
 - 一个已经构建好的 TreeSet，怎么完成倒排序？集合Set实现Hash怎么防止碰撞？
-
-
-#### 1.1.3.3 Map
 - ConcurrentHashMap和Hashtable的区别？ConcurrentHashMap的具体实现知道吗？ConcurrentHashMap是如何实现分段锁？
 - HashMap的扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
 - 为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
@@ -122,21 +84,19 @@
 - 为什么在重写 equals 方法的时候需要重写 hashCode 方法？equals与 hashCode 的异同点在哪里
 
 
-#### 1.1.3.4 数组
-- 在java中，声明一个数组过程中，是如何分配内存的？
-- 种花问题：给你一个数组，里面只有数字0和1，0代表空地，1代表花，为了避免争抢资源，规定：不能由两朵花种在相邻的位置上，距离【1，0，1，0，1】是符合要求的，而【1，1，0，1，0】是不符合要求的，因为这个数组的前两位都是有花种在上面，违反了我们的规则，函数还有一个输入项，n, 如果数组中可以种花的空地>=n,则返回true，否则，返回false。
-- 手写代码，给定整形数组，实现数组逆置
-- 输入一个整数数组，实现一个函数来调整该数组中数组的顺序，使得所有的奇数位于数组的前半部分，偶数位于数组的后半部分。
-- 如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？数组和链表数据结构描述，各自的时间复杂度？
+
+
+### 05.异常处理问题
+- 既然可以用RuntimeException来处理错误，那么你认为为什么Java中还存在检查型异常？
+- Java语言如何进行异常处理，关键字：throws、throw、try、catch、finally分别如何使用？ 
+- 什么是受检查的异常，什么是运行时异常？运行时异常与一般异常有何异同？简述一个你最常见到的runtime exception(运行时异常)？
+- 如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
+- try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
+- 当自己创建异常类的时候应该注意什么？异常处理 handle or declare 原则应该如何理解？catch块里别不写代码有什么问题？
 
 
 
-- 如何实现对象克隆？深拷贝和浅拷贝区别？深拷贝和浅拷贝如何实现激活机制？
-
-
-
-### 1.1.5 Java基础之多线程
-#### 1.1.5.1 Thread线程
+### 06.线程知识问题
 - 线程中start和run方法有什么区别？wait和sleep方法的不同？sleep() 、join（）、yield（）有什么区别？请绘制线程周期图……
 - 用Java手写一个会导致死锁的程序，遇到这种问题解决方案是什么？那些场景用到了死锁机制？
 - 你将如何使用thread dump？你将如何分析Thread dump？
@@ -145,7 +105,8 @@
 - 调用start()方法时会执行run()方法，为什么不能直接调用run()方法？你是如何调用 wait（方法的）？使用 if 块还是循环？为什么
 
 
-#### 1.1.5.2 多线程
+
+### 07.并发知识问题
 - 说一说多线程原理，如果线程过多,会怎样?多线程的优点？同时多线程的缺点？
 - 多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
 - 现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
@@ -161,9 +122,6 @@
 - 假如有一个第三方接口，有很多个线程去调用获取数据，现在规定每秒钟最多有 10 个线程同时调用它，如何做到？
 - 你需要实现一个高效的缓存，它允许多个用户读，但只允许一个用户写，以此来保持它的完整性，你会怎样去实现它？
 - 多线程有什么要注意的问题？ 如何保证多线程读写文件的安全？ 多线程断点续传原理和如何实现？
-
-
-#### 1.1.5.3 线程池
 - 线程池的关闭方式有几种，各自的区别是什么？线程池中submit() 和 execute()方法有什么区别？
 - 用过线程池吗？怎么使用的？线程池内的线程如果全部忙，提交一个新的任务，会发生什什么？队列全部塞满了之后，还是忙，再提交会发生什么？
 - 线程池核心线程数一般定义多少，为什么？
@@ -172,92 +130,25 @@
 - 谈谈你对多线程同步机制的理解？如何保证多线程读写文件的安全？
 - Java中用到的线程调度算法是什么？你对线程优先级的理解是什么？什么是线程调度器 (Thread Scheduler) 和时间分片 (Time Slicing)？
 - newCache 和 newFixed 有什么区别？简述原理。构造函数的各个参数的含义是什么，比如 coreSize, maxsize 等
-
-
-### 1.1.6 Java基础之网络编程
-#### 1.1.6.1 Http和Https
-- 说一下http和HTTPS的区别？HTTPS工作原理是什么？https相关，如何验证证书的合法性？
-- 什么是Http协议无状态协议?怎么解决Http协议无状态协议?
-- 常用的HTTP方法有哪些？post和get请求有什么区别？实际开发中涉及账号登录使用哪种请求？
-- HTTPS 是怎么做加密的？https中哪里用了对称加密，哪里用了非对称加密，对加密算法（如RSA）等是否有了解?
-- Http的request和response的协议组成？说一下 HTTP 协议请求头我们常用的3个字段
-- Https请求慢的解决办法，DNS，携带数据，直接访问IP？Http位于TCP/IP模型中的第几层？为什么说Http是可靠的数据传输协议？
+- 什么是乐观锁（Optimistic Locking）？如何实现乐观锁？如何避免ABA问题？
+- Java中活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
 
 
 
-#### 1.1.6.2 TCP/UDP和IP
-- HTTP通信机制需要经历那些步骤？TCP和UDP有什么区别？
-- TCP 的 3 次握手和四次挥手，说一下这个过程？为什么不能两次握手呢？要三次？client如何确定自己发送的消息被server收到?
-- TCP可靠传输原理实现？如何TCP拥塞控制？TCP如何流量控制？
-- 什么是socket？socket选项 TCP NO DELAY 是指什么？Socket 工作在 TCP/IP 协议栈是哪一层？
-
-
-
-### 1.1.7 Java基础之类的加载
-#### 1.1.7.1 类的加载机制
+### 08.类的加载问题
 - JAVA类加载器包括几种？它们之间的父子关系是怎么样的？双亲委派机制是什么意思？有什么好处？
 - 如何自定义一个类加载器？你使用过哪些或者你在什么场景下需要一个自定义的类加载器吗？
 - 谈谈对ClassLoader(类加载器)的理解？谈谈对动态加载（OSGI）的理解？
 - 什么时候发生类初始化？遇到new、getstatic、putstatic或invokestatic这4条字节码指令时，会做些什么？
 - 什么是双亲委派模型？为什么使用双亲委托模型？
-
-
-### 1.1.8 Java基础之反射原理
-- 什么是反射机制？java反射机制提供了什么功能？在运行时如何调用任一对象的方法？
-- 如何提高反射的效率？反射优缺点有哪些？比如，反射损耗性能，怎么理解？
-- 如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？
-- 如何通过反射创建对象？如何通过反射获取和设置对象私有字段的值？
-
-
-### 1.1.9 Java基础之数据算法
-- 给你一个数组，请排序并手写出代码。使用冒泡排序后，冒泡排序的链表是怎么实现的？还有没有更高效率的排序方式？
-- 算法：将一个有序数组去重得到一个新数组(空间复杂度为O(N))
-- 算法：如何从1T的无序数组(长度为n)里面找出前k大的数据，复杂度要求为O(logN)
-- 最快的排序算法是哪个？给阿里 2 万多名员工按年龄排序应该选择哪个算法？堆和树的区别；写出快排代码；链表逆序代码
-- 二叉树的深度优先遍历和广度优先遍历的具体实现……
-- 算法熟悉么？给了一个二叉排序树，出了一个给定节点找到它的下一个元素（指的是大小顺序的下一个）的算法题
-- 手写一个快速排序，快速排序的过程、时间复杂度、空间复杂度？
-- 二叉树给出根节点和目标节点，怎么才能找出从根节点到目标节点的路径？
-- 子串包含问题(KMP 算法)写代码实现，底层是怎么实现的？
-- 一个无序，不重复数组，输出N个元素，使得N个元素的和相加为M，给出时间复杂度、空间复杂度。手写算法？
-- 时针走一圈，时针分针重合几次？请用算法算出结果……
-- clone()的默认实现是深拷贝还是浅拷贝?如何让clone()实现深拷贝？
-- Arrays和Collections 对于sort的不同实现原理？说一说它们的区别……
-- 算法：给定一段已排好序的数列，数列中元素有可能是重复的，找出数列中目标值的最小索引，要求不能用递归，只能用循环。
-- 设计移动端的联系人存储与查询的功能，要求快速搜索联系人，可以用到哪些数据结构？（二叉排序树，建立索引）
-
-
-
-### 1.2.0 Java基础之异常
-#### 1.2.0.1 Error
-- 既然可以用RuntimeException来处理错误，那么你认为为什么Java中还存在检查型异常？
-- Java语言如何进行异常处理，关键字：throws、throw、try、catch、finally分别如何使用？ 
-
-
-#### 1.2.0.2 Exception
-- 什么是受检查的异常，什么是运行时异常？运行时异常与一般异常有何异同？简述一个你最常见到的runtime exception(运行时异常)？
-- 如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
-- try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
-- 当自己创建异常类的时候应该注意什么？异常处理 handle or declare 原则应该如何理解？catch块里别不写代码有什么问题？
-
-
-### 1.2.1 Java基础之JVM虚拟机
-#### 1.2.1.1 内存区域
 - 如何理解栈，堆，本地方法区……？堆内存设置的参数是什么？
 - StackOverFlow异常有没有遇到过？一般你猜测会在什么情况下被触发？如何指定一个线程的堆栈大小？一般你们写多少？
 - 解释内存中的栈(stack)、堆(heap)和方法区(method area)的用法？
 - 简述重排序，内存屏障，happen-before，主内存，工作内存？
-
-
-
-#### 1.2.1.2 内存分配机制
 - JVM方法区存储内容 是否会动态扩展 是否会出现内存溢出 出现的原因有哪些。
 - JVM内存分哪几个区，每个区的作用是什么？一个对象从创建到销毁都是怎么在这些部分里存活和转移的？
 - JVM中哪个参数是用来控制线程的栈堆栈小？
 - JVM自身会维护缓存吗？是不是在堆中进行对象分配，操作系统的堆还是JVM自己管理堆？什么情况下会发生栈内存溢出？
-
-
-#### 1.2.1.3 垃圾收集器
 - 什么情况下触发垃圾回收？如何选择合适的垃圾收集算法？JVM中最大堆大小有没有限制？吞吐量优先选择什么垃圾回收器？响应时间优先呢？
 - 如何解决内存碎片的问题？如何解决同时存在的对象创建和对象回收问题？
 - Java内存模块分区和GC机制，GC算法有哪些？垃圾回收机制的原理是什么？垃圾回收机制与调用System.gc()区别？
@@ -266,19 +157,20 @@
 - 如果对象的引用被置为null，垃圾收集器是否会立即释放对象占用的内存？
 
 
-#### 1.2.1.4 类文件结构
-- 对JVM熟不熟悉？简单说说类加载过程，里面执行的那些操作？
 
-#### 1.2.1.5 类加载机制
-- JVM如何加载字节码文件？
+### 09.反射使用问题
+- 什么是反射机制？java反射机制提供了什么功能？在运行时如何调用任一对象的方法？
+- 如何提高反射的效率？反射优缺点有哪些？比如，反射损耗性能，怎么理解？
+- 如何反射获取内部类和调用内部类方法以及反射得到匿名内部类？
+- 如何通过反射创建对象？如何通过反射获取和设置对象私有字段的值？
 
-#### 1.2.1.6 高效并发
-- 什么是乐观锁（Optimistic Locking）？如何实现乐观锁？如何避免ABA问题？
-- Java中活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
 
-### 1.2.2 Java基础之其他
-- 类的初始化顺序依次是（静态变量、静态代码块）>（变量、代码块）>构造方法……
-- Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
+### 10.枚举注解问题
+
+
+### 12.其他知识问题
+
+
 
 
 
