--- a/Read/ReadShareWiki/09.其他专栏/01.沟通方式的提升.md
+++ b/Read/ReadShareWiki/09.其他专栏/01.沟通方式的提升.md
@@ -7,10 +7,10 @@
 
 ### 04.三明治的沟通法
 #### 4.1 什么是三明治沟通
-- 关于沟通，关于如何提出自己的要求和建议，以前在微信某篇文章上看到“三明治”沟通法，即把好的放在上下，把不好的夹在中间。因此，当我们希望对方改变什么的时候，我们可以通过这样的方式来进行。
+- 关于沟通，如何提出自己的要求和建议，以前看到过“三明治”沟通法，即把好的放在上下，把不好的夹在中间。因此，当我们希望对方改变什么的时候，可以通过这样的方式来进行。
 
 
-#### 4.2 如何操作呢
+#### 4.2 三明治沟通操作
 - 大概做法：首先先认可对方好的一面，然后提出对方改变的地方，最后再表明对方改变之后更好的样子。
 - 首先：你这个人很好，很努力很漂亮很温柔。这是肯定赞美她。首先肯定对方身上好的地方，让对方飘入云端。
 - 然后：但是，如果你能不能不熬夜到凌晨。这是指出对对方的要求和希望。委婉的道出对方身上不好的一些地方，在肯定之后再说出来，会让对方感受更好。
@@ -20,13 +20,14 @@
 
 #### 4.3 不要一味地批评
 - 一味的批评更容易让人产生抵抗的情绪。三民治沟通法把一味的批评和指责变成了站在对方角度思考问题，然后合理的提出期待。不仅不会挫伤对方的自尊和积极性，还能激活对方主动改变的效率。
-- 最高的情商，就是好好说话。好好说话就包括明确的表达自己，说出的话不会伤害别人，能让别人有很好的体验。我觉得这个三明治沟通法，不仅仅适合谈恋爱中的某些场景，同样也适合我们工作和生活中的沟通。
+- 好好说话就包括明确的表达自己，说出的话不会伤害别人，能让别人有很好的体验。我觉得这个三明治沟通法，不仅仅适合谈恋爱中的某些场景，同样也适合我们工作和生活中的沟通。
 
 
 ### 05.别总封闭性问题
 #### 5.1 不要问封闭问题
 - 不要问封闭问题。问对方的问题大多数都是封闭式的话题，让对方只能从我们给出的选择当中进行回答。聊天当中，很多时候我们问对方的问题，其实都是一个封闭的问题。
-- 什么叫做封闭性问题。就是在问题当中给了对方一个选择，让对方非此即彼，只能选择“是”或者“不是”，“有”或者“没有”，“好”或者“不好”等等。比如，“你喜欢吃橙子吗？”这就是一个封闭性的话题，因为对方只有“喜欢”或者“不喜欢”两种选择。
+- 什么叫做封闭性问题。就是在问题当中给了对方一个选择，让对方非此即彼，只能选择“是”或者“不是”，“有”或者“没有”，“好”或者“不好”等等。
+- 比如，“你喜欢吃橙子吗？”这就是一个封闭性的话题，因为对方只有“喜欢”或者“不喜欢”两种选择。
 
 
 #### 5.2 开放性话题
@@ -34,9 +35,10 @@
 - 比如：“看你去了那么多地方，你最喜欢的是哪里呀？”。这个问题就是一个开放性的问题，它更容易让对方说出自己最喜欢的地方，甚至说出喜欢的理由。
 
 
-#### 5.3 尽量多用开放性话题
-- 当然，对于封闭性的话题，如果对方很会聊天，他也可能不会规规矩矩的回答。但是，如果我们遇到这样会聊天的人，可能也就不需要费尽脑汁去做那么多了。比如：你可能会问“你周末的时候会去健身吗？”。给对方两种选择，会或者不会。但是如果你换成“你周末休息的时候，一般最喜欢做什么呀？”，就给了对方发挥的空间，给了他无数的可能。
-- 也就是说，在不知道对方最想说的话题是什么的时候，尽量用开放性话题去探索寻找，不要给对方限定范围，让他只能被动从当中选择。让我们的思维从一个封闭的空间进入到一个开放的空间，也是给我们的生活重新开了一扇门。
+#### 5.3 多用开放性话题
+- 当然，对于封闭性的话题，如果对方很会聊天，他也可能不会规规矩矩的回答。但是，如果我们遇到这样会聊天的人，可能也就不需要费尽脑汁去做那么多了。
+- 比如：你可能会问“你周末的时候会去健身吗？”。给对方两种选择，会或者不会。但是如果你换成“你周末休息的时候，一般最喜欢做什么呀？”，就给了对方发挥的空间，给了他无数的可能。
+- 在不知道对方最想说的话题是什么的时候，尽量用开放性话题去探索寻找，不要给对方限定范围，让他只能被动从当中选择。让我们的思维从一个封闭的空间进入到一个开放的空间，也是给生活重新开了一扇门。
 
 
 
