--- a/Read/ReadShareWiki/01.出发启程/01.书的序言和介绍.md
+++ b/Read/ReadShareWiki/01.出发启程/01.书的序言和介绍.md
@@ -10,23 +10,23 @@
 
 
 ### 01.看过就以为做到
-- 文章我都收藏了。但是收藏不等于做到了。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。
-- 书籍我都看完了。但是看完不等于吸收了。就像你读完的内容，如果不去思考和没有自己的见解或感受。当过段时间，许多知识点也就忘记了。
-- 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。很多时候，缺少了实践反馈机制。
-- 如何帮助你学得更好，在进行这次课程准备的时候，曾问自己：现在大家不缺知识，不缺信息吧？答案是肯定的，每天新闻，书籍，博客等都是那么多。
-- 为什么大家会花时间来学习这样一个系列课呢？后来找到了答案——我需要给大家更多的附加值。这个附加值不应该只是知识，而是怎么更有效地学习和输出。
+- 文章我都收藏了。**但是收藏不等于做到了**。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。
+- 书籍我都看完了。**但是看完不等于吸收了**。就像你读完的内容，如果不去思考和没有自己的见解或感受。当过段时间，许多知识点也就忘记了。
+- 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。**很多时候，缺少了实践反馈机制**。
+- 如何帮助你学得更好，在进行这次课程准备的时候，曾问自己：现在不缺知识，不缺信息吧？答案是肯定的，每天新闻，书籍，博客等都是那么多。
+- 为什么大家会花时间来学习这样一个系列课呢？后来找到了答案——需要给大家更多的附加值。**这个附加值不应该只是知识，而是怎么更有效地学习和输出**。
 
 
 ### 02.真正实现的目标
 - 很多时候学习东西，看到前方漆黑一片，你不知道自己走得对不对，不知道这么走下去到底有没有效果，会不会浪费时间。
-- 所以，学习路径——真正可以实现的目标，就显得特别重要。一旦能够看到隧道尽头有那么一丝光，你就会告诉自己：“尽管辛苦，我会走到底，因为我看到了那个目标。”
+- 所以，学习路径——真正可以实现的目标，就显得特别重要。一旦能够看到隧道尽头有那么一丝光，你就会告诉自己：“尽管辛苦，但会走到底，因为看到了那个目标。”
 - 如果正好周围有一个火把，你就会觉得：“不是我一个人这么走，原来有那么多伙伴一起走！”你也会告诉自己：“我是对的，我会坚持走！”但是很多时候，我们缺乏这样一个火把。
-- 所以，这是我第一点想要分享给大家的：大家要搞清楚真正要实现的目标是什么，这是特别能让我们坚持下去的理由。
+- 所以，这是我第一点想要分享给大家的：**大家要搞清楚真正要实现的目标是什么，这是特别能让我们坚持下去的理由**。
 
 
 ### 03.方法论而非招数
 - 为什么要这么做，这背后支撑的理论体系是什么。如果你把这两个问题想透，我们每个人都可以掌握各种可变化的招式，来帮助自己更好地成长。
-- 甚至这也能成为改变我们本身思维模式的契机。很多时候我们焦虑、紧张，觉得好像学习没有效果，更多的是因为没有掌握方法论，只是在学简单的招式。
+- 甚至这也能成为改变我们本身思维模式的契机。**很多时候我们焦虑、紧张，觉得好像学习没有效果，更多的是因为没有掌握方法论，只是在学简单的招式**。
 
 
 ### 04.学习要趁热打铁
