--- a/Read/ReadShareWiki/06.职场总结/01.职场晋升的流程.md
+++ b/Read/ReadShareWiki/06.职场总结/01.职场晋升的流程.md
@@ -40,8 +40,9 @@
 
 
 #### 2.2 预审阶段
-- 提名之后就是预审。预审阶段主要是针对提名晋升的名单，进行部门内的一次横向拉通对比。
-- 这样做的目的主要有两个，第一个是防止主管放水，提名太多。在提名阶段，你的主管可能因为管理压力，没有直接拒绝你的晋升请求。在预审阶段公司就可以识别这种情况，因为负责预审的人会进行横向比较。如果两个团队规模和绩效都差不多，其中一个团队的提名人数大大超出另外一个，对应的主管必须给出强有力的原因，否则就很容易被其他主管质疑是否在放水。第二个目的则是防止主管之间的能力评价标准相差太远。刚才我也提到过，能力评价本身其实是比较主观的，每个人的标准可能不一样。也许 A 主管的标准比较严格，B 主管的标准比较宽松，这样 A 团队的员工就比较吃亏了。通过横向拉通对比，公司基本上就能统一各个团队的能力评价标准，尽量做到公平公正。
+- 提名之后就是预审。预审阶段主要是针对提名晋升的名单，进行部门内的一次横向拉通对比。这样做是有目的性的……
+- 第一个是防止主管放水，提名太多。在提名阶段，你的主管可能因为管理压力，没有直接拒绝你的晋升请求。在预审阶段公司就可以识别这种情况，因为负责预审的人会进行横向比较。如果两个团队规模和绩效都差不多，其中一个团队的提名人数大大超出另外一个，对应的主管必须给出强有力的原因，否则就很容易被其他主管质疑是否在放水。
+- 第二个目的则是防止主管之间的能力评价标准相差太远。刚才我也提到过，能力评价本身其实是比较主观的，每个人的标准可能不一样。也许 A 主管的标准比较严格，B 主管的标准比较宽松，这样 A 团队的员工就比较吃亏了。通过横向拉通对比，公司基本上就能统一各个团队的能力评价标准，尽量做到公平公正。
 
 
 ### 03.晋升之中的阶段
