--- a/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
+++ b/Read/ReadShareWiki/06.职场总结/02.职场晋升的规则.md
@@ -9,6 +9,7 @@
 
 
 
+
 ### 01.职场晋升的原则
 #### 1.1 主动做事的原则
 - 工作要积极主动，这句话你一定听过吧，但你对它的理解真的准确吗？很多人，尤其是刚进入职场的同学，可能会以为“服从命令听指挥”“领导指哪打哪”就是积极主动，结果反而容易养成两个不好的习惯。
@@ -171,8 +172,7 @@
 
 
 #### 6.2 晋升的底层逻辑
-- 晋升的第一条逻辑是，在当前级别做下一级别事情的人，才有机会晋升。
-- 晋升的第二条逻辑是，只有把当前级别的事情做好了，才有机会晋升。
+- 晋升的第一条逻辑是，在当前级别做下一级别事情的人，才有机会晋升。晋升的第二条逻辑是，只有把当前级别的事情做好了，才有机会晋升。
 - 基础、熟练和精通三种水平的区别是，基础意味着会做，标志是能够独立完成；熟练意味着做好，标志是掌握最佳实践；精通意味着优化，标志是创造新的经验。
 - 通用的晋升步骤是，先把当前级别要求的能力提升到精通水平，接着按照下一级别的能力要求继续提升，然后主动寻找工作机会，尝试下一个级别的工作，最后拿着工作成果申请晋升。
 
