--- a/Read/ReadShareWiki/06.职场总结/04.提高工作的效率.md
+++ b/Read/ReadShareWiki/06.职场总结/04.提高工作的效率.md
@@ -2,10 +2,11 @@
 - 01.快速进工作状态
 - 02.做职场时间管理
 - 03.争更多职场资源
-- 04.定期总结反馈输出
+- 04.定期总结和反馈
 - 05.给自己安排事情
 - 06.来看一个小故事
 - 07.最后总结下笔记
+
 
 
 ### 01.快速进工作状态
@@ -15,7 +16,7 @@
 
 
 #### 1.1 完成开工仪式
-- 今天早上刚刚来到公司，是不是还没有走到工位附近就没有工作状态了？那我建议你来个最好是开工仪式，比如说收拾下桌面+清洗下茶杯+喝杯水，然后开工。对于我自己，一般都是提前30分钟到公司，形成了习惯。
+- 早上刚刚来到公司，是不是还没有走到工位附近就没有工作状态了？那我建议你来个最好是开工仪式，比如说收拾下桌面+清洗下茶杯+喝杯水，然后开工。对于我自己，一般都是提前30分钟到公司，形成了习惯。
 
 
 #### 1.2 拟好每日清单
@@ -29,23 +30,17 @@
 
 
 #### 1.3 学会拆解动作
-- 我们都知道，高考中数学最后一道大题都是最难的，也是你需要花费最多时间去求解的。
-- 同样的，在职场上你也会遇到一些“需要你花费最多时间”去解决的问题，而这个时候很多人常常觉得“要事第一”，一定要先搞完最难的那一个，可想而知最难的永远是最难搞定的。
-- 因为最重要的事通常都是最困难、最困惑的，你想搞定它，又不知道怎么下手，就无法进入工作状态了，自然也就无法提高工作效率了。
-- 所以建议学会拆解动作，你思考的只有一个问题：
-- 这件事情的下一步行动是什么？比如说做今天上午12点之前你需要完成地图开发技术方案，那么完成这个方案下一步行动是什么？
-- 思考如何构建框架，再下一步？
-- 找各部门收集整理项目具体进展信息，再下一步？
-- 找个合适模板开始整理，再下一步？
-- 罗列开发要点，技术难点，实现框架，然后开始写。你看，这样一来就把做项目开发这个事拆解成了若干个步骤，而不是胡子眉毛一把抓，最烦的是又抓不到重点，还浪费时间。
+- 在职场上你会遇到一些“需要你花费最多时间”去解决的问题，而这个时候很多人常常觉得“要事第一”，一定要先搞完最难的那一个，可想而知最难的永远是最难搞定的。
+- 因为最重要的事通常都是最困难、最困惑的，你想搞定它，又不知道怎么下手，就无法进入工作状态了，自然也就无法提高工作效率了。所以建议学会拆解动作……
+- 你思考的只有一个问题：这件事情的下一步行动是什么？比如说做今天上午12点之前你需要完成地图开发技术方案，那么完成这个方案下一步行动是什么？
+- 第一步：思考如何构建框架，再下一步？第二步：找各部门收集整理项目具体进展信息，再下一步？第三步：找个合适模板开始整理，再下一步？第四步：罗列开发要点，技术难点，实现框架，然后开始写。
+- 你看，这样一来就把做项目开发这个事拆解成了若干个步骤，而不是胡子眉毛一把抓，最烦的是又抓不到重点，还浪费时间。
 
 
 
 #### 1.4 学会做笔记
 - 很多时候你会发现职场上的事靠脑子是记不住的，所以我的建议是手边常备笔记本，针对一些突发或计划外、又不得不承接下来的事情，写在笔记本上，一方面是不要忘记了，另一方面是别让这种打扰影响你的工作状态。
-- 做笔记这个习惯，我从前年到现在一直在坚持，结合上文中的“拟好每日清单”，你会发现坚持的时间越久，接下来工作思路越加清晰且有条理。
-- 一般来说，做事的思维不好短时间改变，但可以慢慢改变习惯，然后影响思维。
-
+- 做笔记这个习惯，我到现在一直在坚持，结合上文中的“拟好每日清单”，你会发现坚持的时间越久，接下来工作思路越加清晰且有条理。**一般来说，做事的思维不好短时间改变，但可以慢慢改变习惯，然后影响思维**。
 
 
 
@@ -98,7 +93,8 @@
 
 
 #### 3.2 提高能见度
-- 提到过一个观点，就是有意识地提高工作曝光度。主动与上下游的同事、分管的领导聊聊工作进展，让大家知道你在做什么、取得了什么阶段性成果。千万不要只顾埋头拉车，不与别人交流。只有你被看见的，你的努力才能被看见。最后要强调，最重要的是提高自己的产出，还要思考如何提高产出，因为有的时候在业务开发工作量少的情况下，如何贡献力量？
+- 提到过一个观点，就是有意识地提高工作曝光度。主动与上下游的同事、分管的领导聊聊工作进展，让大家知道你在做什么、取得了什么阶段性成果。
+- 千万不要只顾埋头拉车，不与别人交流。只有你被看见的，你的努力才能被看见。最后要强调，最重要的是提高自己的产出，还要思考如何提高产出，因为有的时候在业务开发工作量少的情况下，如何贡献力量？
 
 
 
@@ -117,7 +113,7 @@
 
 
 
-### 04.定期总结反馈输出
+### 04.定期总结和反馈
 #### 4.1 周和月总结
 - 为什么要做周总结或者月总结呢？这个事对自己工作的一个反馈，不要把它当作工作来完成，重视它。
 - 如果觉得周总结太频繁了，那么至少要有月总结。这个阶段主要做了那些事情，做的效果怎么样，还有那些遗漏或者未解决的问题，下一个阶段该做那些事情。都可以思考一下，主要是让自己对一个月的产出有个认识。
@@ -149,6 +145,7 @@
 #### 5.1 思考一个问题
 - 工作全都是由别人安排的，所谓的努力工作、加班加点其实不过是在为别人的目标而进行的自我消耗。问一下自己有属于自己的事要做吗？似乎有过，那是什么呢？似乎从来就没有！事实上这种情况在生活中也非常普遍！
 - 忙完了别人安排的事，就找不到属于自己的事，这是身上普遍存在的一种另类的懒惰。难道不该站出来拯救一下自己吗？
+
 
 
 #### 5.2 不断优化和思考
