--- a/Read/ReadShareWiki/06.职场总结/09.职场减分的行为.md
+++ b/Read/ReadShareWiki/06.职场总结/09.职场减分的行为.md
@@ -19,7 +19,8 @@
 
 
 #### 1.1 减少自己的抱怨
-- 减少自己的抱怨。很多人都曾抱怨过：“我们老板每天都让我做这做那，而且很多事情都是重复的，烦都烦死了，您说我该怎么办啊？”每当这时，就会反问他们：“那你有没有想过，除了基础的日常工作，老板为什么会让你反复去做同一件事呢？你在第一次执行时是不是哪里没有做好呢？老板是不是因为对之前的执行结果不满意，所以要你再做一次呢？”后来发现，大部分人都回答不上来问题，因为他们“心虚”——只知道自己做完了很多，却不知道自己做得怎么样。
+- 减少自己的抱怨。很多人都曾抱怨过：“老板每天都让我做这做那，而且很多事情都是重复的，烦都烦死了，您说我该怎么办啊？”
+- 每当这时，就会反问他们：“那你有没有想过，除了基础的日常工作，老板为什么会让你反复去做同一件事呢？你在第一次执行时是不是哪里没有做好呢？老板是不是因为对之前的执行结果不满意，所以要你再做一次呢？”后来发现，大部分人都回答不上来问题，因为他们“心虚”——只知道自己做完了很多，却不知道自己做得怎么样。
 
 
 #### 1.2 要么跳槽要么干
