--- a/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
+++ b/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
@@ -8,6 +8,7 @@
 - 07.及时和上级沟通
 - 08.辞职不要有冲动
 - 09.收到之后请回复
+- 10.区分做好和做完
 - 10.尊敬和服从上级
 - 11.找正常途径反馈
 - 12.不要煽负面消息
@@ -78,6 +79,20 @@
 - 与人交流最糟糕的体验莫过于：一条信息发出去之后，就陷入了无尽的等待。看到了信息，动动手指回复一句“收到”，用不上30秒的时间，但是这却是一项很重要的社交礼仪。它代表了对发信人的一种反馈，更是对对方的一种尊重。
 - 但是对于其他的信息，你可以不“秒”，却一定要“回”。哪怕当时没有空闲，回复一句“在忙，稍后再说”，也是一种交代。实在没有注意到而遗漏了的信息，回复时先说一句道歉，讲明理由再继续交谈，也是一种弥补。收到回复，是一个再简单不过的举动，但却能够反映出一个人的人品与责任心。记得刚入职场的时候一位前辈跟我讲，要多跟靠谱的人来往，我问他，什么样的人才算是靠谱的人呢？他的回答是：“所谓靠谱，就是凡事有交代，件件有着落，事事有回音。”
 
+
+
+### 10.区分做好和做完
+#### 10.1 做了是否做好
+- 每天看似忙碌不跌的你，在工作中执行任务时，是否也只是满足于“做”，却忽略了做的“结果”？虽然，“做完”和“做好”仅有一字之差，但二者的本质是不同的。
+- 前者执行了但却不到位，只是走过场或者是纯粹地应付了事；而后者不但执行了，而且到位了，它代表着对自我目标负责、对上级组织负责，对公司利益负责。
+- 一名员工是否有较高的执行力，关键就在于他重视“做好”这一结果。所以，千万不可自我满足，更不可自欺欺人，明明是自己一开始就没有执行到位，最后却把责任怪在别人头上。
+- 既然执行了，就要付出100%的努力去做事，一步到位交出满意结果，否则拖延到最后不合格，老板就可能反反复复地要求你重新执行，直到符合要求为止，但这不仅浪费了企业的资源，更浪费了你自己的时间。
+
+
+#### 10.2 做好的法则
+- **法则1：纠正“差不多”心态，执行任何一项任务都要严格要求自己**。在这个竞争激烈的社会，要想做得出色，受到认可和欢迎，就必须严格要求自己，这也是把事情做好的保证，如果总是觉得“差一不二”就行了，那你将永远停留在“做完”那一步。
+- **法则2：在执行中树立自己的品牌，既然做就要做好**。一次高效的执行不仅可以带给你一个圆满的成果，还能使你渐渐树立其自己的品牌，产生源源不断的工作动力。所以，既然做就做好，这样一来，你的整个工作流程就会变成一种良性循环，任务就会轻松一步到位地搞定。
+- **法则3：对自己和结果负责，提高核心竞争力**。身为企业员工，不要一味地背诵执行的重要性，更要在实际行动中把任务执行到位，对自己和结果负责，这样才能在“做完”的基础上“做好”，逐渐提高自己的核心竞争力。
 
 
 
