--- a/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
+++ b/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
@@ -17,6 +17,8 @@
 - 15.身后莫说人是非
 - 16.职场得学会邀功
 - 17.要遵守游戏规则
+- 18.技能要高于薪酬
+- 19.避免成为小白兔
 
 
 
@@ -179,6 +181,41 @@
 - 但你一定要学会慢慢接受这种游戏规则。不要试图改变这种规则，因为在老板面前，你没有太多的话语权。说得再难听些，你只是一个打工的，如果不想做，可以离开。记住这句话：“如果你不是游戏规则的制定者，你的选择只有两条：要么屈从，要么离开！”
 
 
+
+### 18.技能要高于薪酬
+#### 18.1 外酬和内酬
+- 在职业生涯理论中，对于薪酬有“外酬”和“内酬”之说，也就是“内收入”与“外收入”。**所谓“外酬”指的是企业给你发的工资、奖金、补贴、福利等，以及企业现在给你确定的岗位和职务，而“内酬”则指的是员工在工作过程中获得的培训机会、成长的空间、职业资历、技能水平的提高等**。
+
+
+#### 18.2 外生涯和内生涯
+- 相应的，一个员工的职业生涯也就有了“外生涯”与“内生涯”之分，“外生涯”表示你现在的薪水与职务水平等，“内生涯”表示你现在的知识、能力和发展潜力等，是你现在所拥有的职业水平。
+- 由此，不难理解，薪酬是大于薪水的，衡量收入的高低不仅要看“外酬”、“外收入”薪水的高低，更要看“内酬”、“内收入”的多少。
+
+
+#### 18.3 提升自己的内功
+- 在职业生涯过程中，关注薪酬、待遇是应该的，也是必须的。但是，薪酬、待遇、职位之类的东西只是属于外职业生涯，外职业生涯的因素通常由别人决定、给予的，也容易被别人否定和剥夺。
+- 企业今天能给你加薪，明天也可能给你降薪，今天给你升职，明天也可能会降你的职、免你的职。**而知识、能力、技能、素养、态度这些“内收入”，则主要靠借助企业的平台，自己持续努力地学习、探索和积累获得，这些并不会随外职业生涯因素的改变而丧失**。
+- 可见，“内生涯”是根本，“外生涯”是表象，“内生涯”是原因，“外生涯”是结果，“内生涯”决定“外生涯”，“内收入”决定“外收入”。所以，我们应该眼睛向内，注重提高自己的职业技能，这样才能在职业竞争中无往而不胜。
+
+
+### 19.避免成为小白兔
+#### 19.1 什么是小白兔
+- 所谓“小白兔”员工，就是指那些态度很好，待人热情，团队意识也不错，但是能力很差的员工。换言之，就是那种很乖很努力但出不了结果的人。
+
+#### 19.2 做久了就稳吗
+- 职场上我们常走的几个误区就是：做久了，就坐稳了。努力了，就优秀了。我以公司为家，我就是老板的家人了。这些都是一厢情愿。
+- 要在职场上获得公平，不仅仅是付出就够了，一定要成为公司需要的人，你才能有足够的话语权。公司需要的，是资深的人，而不是做得久的人；是有效率的人，而不是有行动的人；是能创造功劳的人，而不是创造苦劳的人。
+
+
+#### 19.3 值钱是劳动成果
+- 要知道，值钱的并不是劳动，而是劳动成果。有人说：公司要定期清理小白兔，否则会发生死海效应。如果一个公司大量核心岗位被兔子霸占，形成了“兔子窝”文化，是注定会失败的。
+- **你的工作价值，不是看你做了多少事情，而是看你做成了多少事情**。别人不能做的事情你能做；别人能做的事情你做得比别人好；别人做得好的事情你能做得比别人更细致，这才是你在职场上挺直腰杆的资本，也是你能为自己挣得权利的筹码。
+
+
+#### 19.4 多谈价值而非感情
+- 对于一个有正常企业文化的公司来讲，有效的努力与报酬一定是成正比的，一个员工的薪酬水平就是他能力水平的真实反应。
+- **如果你创造了足够多的价值，老板还在跟你谈感情，不谈升职加薪，也是一种耍流氓**。公司盈利，员工不获利，也就意味着员工做得好与不好都没有区别，时间长了也会造成另一片“死海”，好员工走光了，平庸的员工混日子，公司会失去生产力。
+- 选择权并不是只在老板手中，谁强大，谁就是规则。别跟老板谈感情，咱谈谈价值谈谈钱，挺好的。你若能做到别人无可取代，谁怕谁呀！
 
 
 
