--- a/Read/ReadShareWiki/10.其他精品/10.职场经典面试题.md
+++ b/Read/ReadShareWiki/10.其他精品/10.职场经典面试题.md
@@ -67,7 +67,11 @@
 
 #### 04.谈下对加班的看法
 - 回答提示：实际上好多公司问这个问题，并不证明一定要加班，只是想测试你是否愿意为公司奉献。
-- 回答样本：如果是工作需要我会义不容辞加班，我现在单身，没有任何家庭负担，可以全身心的投入工作。但同时，我也会提高工作效率，减少不必要的加班。
+- 回答样本：如果是工作需要我会义不容辞加班，没有任何家庭负担，可以全身心的投入工作。但同时，我也会提高工作效率，减少不必要的加班。如果是重复性的工作，那么就要反思为什么工作时间没有完成，非要拖到加班。
+- 如果是对于自己喜欢的工作或者想要提升的技能，是完全可以通过业余加班去慢慢提升的。如果是对于不喜欢的或者反感的，那么加班无疑只是打发时间罢了，本质是很难有多大的作用的，更多时候会让自己身心疲惫！
+- 其实，一个人的努力并不需要在加班的时候才能体现出来。真正的拼搏，是一个人在专心于工作的同时，也能有时间去学习、思考和沉淀，保持愉悦的精神状态，拥有充沛的体力精力，这才是对工作最好的助力。
+
+
 
 
 #### 05.你对薪资什么要求
