--- a/Read/ReadShareWiki/06.职场总结/03.职场打工人提升.md
+++ b/Read/ReadShareWiki/06.职场总结/03.职场打工人提升.md
@@ -6,6 +6,7 @@
 - 05.专业之外多提升
 - 06.突破边界不设防
 - 07.要绘制成长蓝图
+- 08.机会会不期而遇
 
 
 
@@ -85,6 +86,13 @@
 - 第二个关键点：学习行动计划、养成行动习惯都是为了提升行动的效率，行动积累了足够的 “能量” 后，就向更高能量级跳跃。这里是更高维度抽象的比喻，比如：知识模型和技能体系，就比孤立的知识点和技能拥有更高的能量级。
 - 第三个关键点：非连续跳跃，说明这样的进化有突变的特征。个人知识的积累与能力的提升，其实都是比较缓慢而连续的，非连续的跳跃其实体现在机会和运气上。合适的机会若没能降临，你就没法完成跃迁。
 - 连续的成长积累是你能掌控的部分，而跃迁的机会、运气则属于概率成分，你的努力可能一定程度上提高了概率，但它并不能导致必然的跃迁结果发生。即使机会没能到临，努力过后也许有无奈，也该当无悔了。
+
+
+### 08.机会会不期而遇
+- **这个世界上的每个人都一定会有机会的，只是这个机会来的时候，你是如虎添翼一飞冲天，还是雁过拔毛占点儿便宜**？
+- 不是机会改变了你的命运，而是你抓住了机会，改变了自己的命运。不是机会让你出人头地、年少成名，而是你长期的准备让你获得了能出人头地的机会。
+- **机会只是催化剂，只有当你和要做的事情有可能发生化学反应的时候，机会才有意义。一直等的，其实并不是机会，而是自己的成长。当你真的准备得差不多的时候，你就会发现原来机会那么多，你要做的只是选择哪一个而已**。
+
 
 
 
