--- a/Read/ReadShareWiki/06.职场总结/05.职场困扰和疑惑.md
+++ b/Read/ReadShareWiki/06.职场总结/05.职场困扰和疑惑.md
@@ -7,8 +7,11 @@
 - 06.远离低质量勤奋
 - 07.失业感和恐惧感
 - 08.该去创业公司吗
+- 09.工作和生活平衡
 - 10.多提升职场身价
 - 11.要摆脱职业焦虑
+
+
 
 
 ### 01.职场焦虑的源头
@@ -100,6 +103,20 @@
 - 决策很难，让人经常很矛盾，很沮丧。往回看，我们总能找到适合自己的最优决策路径，但当初却并没有选到这条路，所以沮丧。往前看，其实有无数的路径分支，我们怎么可能选中最优路径，有这样的方法吗？没有。
 - 古时先哲讲过的一个故事，大意是：你有一个机会经过一条路，这条路两边都是大大小小的宝石，但你只能走过这条路“一次”，捡起其中“一块”宝石，中间不能更换。这里捡到最大的宝石就是最优策略，但你怎么实现这个最优策略呢？其实没有方法能保证。
 - 当你面临加入创业公司的选择时，问问你的期望，评估现实的条件，再做出满意的选择；决策过后，可能有遗憾，但没不甘。
+
+
+### 09.工作和生活平衡
+#### 9.1 工作与生活处境
+- 工作与生活的平衡，到底是怎样一种状态？错把平衡当作了目标，而实际平衡更多是一种感受。有句话是这么说的：人若没有目标，就只好盯着感受，没有平衡，只有妥协。
+- 认清自己当前阶段的目标，定义清楚这个阶段的平衡点。一个阶段内，就不用太在意每一天生活与工作的平衡关系，应放到整个阶段中一个更长的周期来看，达到阶段的平衡即可。
+- 通过短期的逃避带来的平衡，只会让你在更长期的范围内失衡。结合当下的处境与状态，没有静态的平衡，只有动态的调整。
+
+
+#### 9.2 工作与生活比例
+- 选择工作在生活中的比例问题，是一个关于优先级和价值观的问题。要主动选择，从一定的长周期看，就需要确定到底怎么样的比例合适。
+- 从操作上来说，它其实是一个交易问题，关乎自己的所得和所失的交易。选择二者间的交换比例，意味着我们要进行权衡取舍，并为之承担相应的结果。
+- 工作与生活的平衡比例选择，可以借用一下投资交易中的策略：年轻时，要更多投资于风险更高、波动更大、但潜在收益也更大的股权类权益；随着年纪见长，就要慢慢增大更稳定和确定的债券类投资比例，降低股权比例。
+- 早期的高投入，是为了将来需要更多平衡时，能获得这种平衡的能力。在风险中沉浮，平衡的交易策略就是用来应对风险与波动的。
 
 
 
