--- a/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
+++ b/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
@@ -19,7 +19,7 @@
 - 17.要遵守游戏规则
 - 18.技能要高于薪酬
 - 19.避免成为小白兔
-
+- 20.要注重时间成本
 
 
 ### 01.听直接领导的话
@@ -217,6 +217,12 @@
 - **如果你创造了足够多的价值，老板还在跟你谈感情，不谈升职加薪，也是一种耍流氓**。公司盈利，员工不获利，也就意味着员工做得好与不好都没有区别，时间长了也会造成另一片“死海”，好员工走光了，平庸的员工混日子，公司会失去生产力。
 - 选择权并不是只在老板手中，谁强大，谁就是规则。别跟老板谈感情，咱谈谈价值谈谈钱，挺好的。你若能做到别人无可取代，谁怕谁呀！
 
+
+
+### 20.要注重时间成本
+- 年轻的时候，受父母的影响，特别抠门，出门经常为了省钱，颇费心思，比如乘坐廉价航班到就近的城市转火车；比如选择相对便宜的酒店。其实收入并不低，就是思维惯性。为了省小钱，实际上浪费了大量的宝贵时间，而这些时间的价值是极为巨大的。
+- 比如为了省一些房租租偏僻地区的房间，为了省钱选择浪费时间的通勤方案，如果你觉得自己时间不值钱，那么，你就真的不值钱了。如何正确评估时间成本，往往是决定年轻人成长效率最关键的一步。
+- 做任何决策，都更重视“时间的价值”，懂得用投资的心态看待长远的发展，而非以交易的心态只着眼于眼前的得失。时间是有复利的，你的努力，你的学习，可能短期内看不到明显的收益，但积累到一定程度，厚积薄发，时间会酬劳每个尊重它的人。
 
 
 
