--- a/Read/ReadShareWiki/07.底层思维/10.决策能力的提升.md
+++ b/Read/ReadShareWiki/07.底层思维/10.决策能力的提升.md
@@ -5,8 +5,7 @@
 
 
 ### 01.先看几个案例
-- 先看一个案例
-    - 很多有追求的年轻人在职场经常会抱怨，老板不采纳自己的建议，很多时候，明明很积极努力试图证明自己，却总是被泼冷水，实现不了自己的目标。
+- 很多有追求的年轻人在职场经常会抱怨，老板不采纳自己的建议，很多时候，明明很积极努力试图证明自己，却总是被泼冷水，实现不了自己的目标。
 
 
 
@@ -16,8 +15,7 @@
 
 
 ### 03.思考谁承担成本
-- 谁承担成本，谁负责决策。
-- 为什么员工要听老板的，因为老板承担最大的成本。
+- 谁承担成本，谁负责决策。为什么员工要听老板的，因为老板承担最大的成本。
 - 但老板无法事无巨细，就会把部分成本的控制权，下发给不同级别的管理者。所以，你提出一个方案，对管理层来说，第一要考虑的，就是成本。
 - 这个成本，不仅仅是你的市场预算，研发成本，还包括时间成本，替代的机会成本，企业的管理成本和其他风险成本，特别是风险成本。
 - 对从业者来说，你做了一个危险的决策，通常，最大的风险就是失去工作，找个其他公司就完了。但对于老板来说，他的风险可能就是失去企业，甚至失去自由。双方的成本感知是完全不同的。
