--- a/Read/ReadShareWiki/08.技术管理/01.导师管理方法论.md
+++ b/Read/ReadShareWiki/08.技术管理/01.导师管理方法论.md
@@ -7,7 +7,7 @@
 
 ### 01.前沿介绍
 - 随着业务不断的发展，团队的规模也越来越大，为了让新入职的同学能更好更快速地融入集体发挥自身热量，需要老童鞋们特殊的关怀。
-- 不同于公司层面的橘伴，偏重于公司制度和生活层面的内容，导师 (Mentor) 的角色更像是游戏里的助手，让你能快速地接收任务，明白整个游戏的运转方式，然后不断的接受挑战，增长经验提升战斗力，然后独当一面。
+- 不同于公司层面的伙伴，偏重于公司制度和生活层面的内容，导师 (Mentor) 的角色更像是游戏里的助手，让你能快速地接收任务，明白整个游戏的运转方式，然后不断的接受挑战，增长经验提升战斗力，然后独当一面。
 
 
 ### 02.整体节奏
