--- a/Read/ReadMeWiki/07.Jetpack/03.LiveData学习.md
+++ b/Read/ReadMeWiki/07.Jetpack/03.LiveData学习.md
@@ -25,6 +25,9 @@
     - 6.1 生命周期监听思考
     - 6.2 Active状态思考
     - 6.3 为何要设置Active
+- 07.一些遇到问题分析
+    - 7.1 观察LiveData问题
+
 
 
 ### 01.LiveData介绍
@@ -324,10 +327,10 @@
 
 
 
-
-
-
-
+### 07.一些遇到问题分析
+#### 7.1 观察LiveData问题
+- 简单阐述下问题：在Fragment中对LiveData对象调用Observe方法的时候，传递的LifecycleOwner参数为this或者viewLifecycleOwner有何区别？
+    - 具体看：http://events.jianshu.io/p/7073ec569f7f
 
 
 
