--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -18,6 +18,7 @@
 - 04.崩溃监听思路
     - 4.1 实现崩溃监听
     - 4.2 处理捕获异常
+    - 4.3 实现相同异常次数统计
     - 4.4 崩溃日志收集
     - 4.5 捕获指定线程异常
     - 4.7 日志发送邮箱
@@ -40,7 +41,8 @@
 
 ### 01.整体介绍概述
 #### 1.1 项目背景介绍
-- `Android`的稳定性是`Android`性能的一个重要指标，它也是App质量构建体系中最基本和最关键的一环。如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
+- `Android`的稳定性是`Android`性能的一个重要指标，它也是App质量构建体系中最基本和最关键的一环。
+- 如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
 
 
 #### 1.2 遇到问题
@@ -48,7 +50,8 @@
 
 
 #### 1.3 基础概念介绍
-- 崩溃现场是我们的“第一案发现场”，它保留着很多有价值的线索。接下来我们具体来看看在崩溃现场，确认重点，内存&线程需特别注意，很多崩溃都是由于它们使用不当造成的。如何去分析日志
+- 崩溃现场是我们的“第一案发现场”，它保留着很多有价值的线索。
+    - 接下来我们具体来看看在崩溃现场，确认重点，内存&线程需特别注意，很多崩溃都是由于它们使用不当造成的。如何去分析日志
 - 确认严重程度
     - 如果一时半会解决不了，那么能否先止损，采用降级策略。延期修复，如果是非要解决，那么解决完后即通过灰度测试发版，及时跟进问题。
 - 崩溃基本信息
@@ -64,6 +67,10 @@
 
 
 #### 1.4 设计目标
+- 能够准确将崩溃日志写到本地文件
+- 能够有效计算相同崩溃的次数
+- 能够可视化展示崩溃日志信息
+- 能够将崩溃信息文件转发分享
 
 
 #### 1.5 产生收益分析
@@ -338,18 +345,10 @@
 
 ### 04.崩溃监听思路
 #### 4.1 实现崩溃监听
-- `handler`将会报告线程终止和不明原因异常这个情况，如果没有自定义`handler`， 线程管理组就被默认为报告异常的`handler`。
-    - `ThreadHandler`这个类就是实现了`UncaughtExceptionHandler`这个接口，伪代码代码如下所示
+- `ThreadHandler`这个类就是实现了`UncaughtExceptionHandler`这个接口。`handler`将会报告线程终止和不明原因异常这个情况。
     ``` java
     public class ThreadHandler implements Thread.UncaughtExceptionHandler {
         private Thread.UncaughtExceptionHandler mDefaultHandler;
-        @Override
-        public void uncaughtException(Thread t, Throwable e) {
-            if (mDefaultHandler != null) {
-                mDefaultHandler.uncaughtException(t, e);
-            } 
-            //处理业务
-        }
         public void init(Application ctx) {
             mDefaultHandler = Thread.getDefaultUncaughtExceptionHandler();
             Thread.setDefaultUncaughtExceptionHandler(this);
@@ -357,10 +356,14 @@
     }
     ```
 
-
-
 #### 4.2 处理捕获异常
-
+- 当出现异常的时候，最终会将异常分发到uncaughtException这个回调方法中。处理捕获异常相关操作，就是在这个方法中处理
+    ``` java
+    @Override
+    public void uncaughtException(Thread t, Throwable e) {
+        //处理业务，可以拿到线程和异常throwable对象，解析异常操作
+    }
+    ```
 
 
 #### 4.4 崩溃日志收集
