--- a/Read/ReadShareWiki/03.建立体系/02.体系思维很重要.md
+++ b/Read/ReadShareWiki/03.建立体系/02.体系思维很重要.md
@@ -3,7 +3,7 @@
 - 02.点性思维较凌乱
 - 03.线性思维视野宽
 - 04.面性思维成框架
-- 05.体性思维附加值
+- 05.立体思维附加值
 - 06.点线面体的思维
 
 
@@ -14,21 +14,28 @@
 
 
 ### 02.点性思维较凌乱
+- 点性思维：看到什么就是什么，一点就是一点，一就是一，二就是二，不随意展开。很多技能型人才，实干型人才，往往属于这种思维。他们总是把精力聚焦在某一个具象的领域，擅长把这个领域做精做透。
 - 进入任何一个知识领域，都是从一个点开始的。大学进入软件开发领域所接触的一系列的点，我将其从左到右按时间顺序排列。红色的部分是目前还属于我 “掌握” 与 “了解” 的领域，其他灰色的部分则是要么被时代淘汰了，要么已经被我放弃了维持与更新。
 - 每一个技术点，似乎都是自己选择的，但又感觉只是一种被趋势推动的一次次无意“捡起”。有些点之间有先后的承接关系，而更多点都慢慢变成了孤点，从这片技术的星空中暗淡了下去。
 - 在你入行后，我想你可能也会因为时代、公司或项目的原因，有很大的随机性去接触很多不同的技术点。但如果你总是这样被客观的原因驱动去随机点亮不同的 “点”，那么你终究会感到有点疲于奔命，永远追不上技术的浪潮。
 
 
 ### 03.线性思维视野宽
-- 当形成的点足够多了后，一部分点开始形成线，而另一些点则在技术趋势的演进中被自然淘汰或自己主动战略放弃。那你到底该如何把这些零散的点串成线，形成自己的体系与方向呢？
-- 一个个点，构成了基本的价值点，这些点串起来，就形成了更大的价值输出链条。在这条路上，你也会有一条属于自己的 “T 线”，当这条线成型后，你的价值也将变得更大。
+- 线性思维：可以从具体的点延展成一条线，或者是把各种点能连串成线，这要求人具有一点的逻辑推理能力，要善于归纳/总结和分析。
+ - 为什么很多技能型人才的专业技能熟悉到一定程度就可以靠经验下决策，就是因为他们把点连成了线。
+- 当形成的点足够多了后，一部分点开始形成线，而另一些点则在技术趋势的演进中被自然淘汰或自己主动战略放弃。
+- 那你到底该如何把这些零散的点串成线，形成自己的体系与方向呢？一个个点，构成了基本的价值点，这些点串起来，就形成了更大的价值输出链条。在这条路上，你也会有一条属于自己的 “T 线”，当这条线成型后，你的价值也将变得更大。
+
 
 
 ### 04.面性思维成框架
-- 线的交织，将形成面。
+- 面性思维：从点延展到线，在展开成面的思维。在数学上，线的交织，将形成面，三个点就可以确定一个面，也就是说：任何事情只要得到三个点的信息，就可以把握其全局。
+- 这要求人有一定的联想能力和预测能力，要能从一滴水能看到整个大海。很多专业性人才，做到一定程度就可以举一反三，甚至可以跳出行业限制，成为管理者，去统管更多的人，成为一个领导，因为他们的思维是面性的。
 
 
-
+### 05.立体思维附加值
+- 立体思维，就是要在面性思维的基础上再多一个维度，这个维度往往是一种综合能力，需要人有一种系统的能力，能全方位/立体的把握一个事物，从各个角度对它的构造进行解析。
+- 比如很多人在公司/单位做到一定程度，就自己去创业，创业需要的就是一种综合素养，是一种很立体的能力，既需要专业知识和资源，还需要开拓市场的能力，还得具备管理能力，谈判能力等等。
 
 
 
