--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.整体概述说明
     - 1.1 项目背景介绍
-    - 1.2 遇到问题
+    - 1.2 遇到问题记录
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
@@ -64,7 +64,7 @@
 - 针对不同的业务场景，不同的缓存方案。打造一套通用的方案，屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，简化使用，提高开发效率和使用效率……
 
 
-#### 1.2 遇到问题
+#### 1.2 遇到问题记录
 - 问题1：各种缓存方案，分别是如何保证数据安全的，其内部使用到了哪些锁？由于引入锁，给效率上带来了什么影响？
 - 问题2：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
 - 问题3：各种缓存方案使用场景是什么？有什么缺陷，为了解决缺陷做了些什么？比如sp存在缺陷的替代方案是DataStore，为何这样？
