--- a/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
@@ -62,6 +62,16 @@
 
 
 #### 2.4 弱网模拟分析
+- 如何开发模拟网络异常工具
+    - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
+- 如何模拟网络超时
+    - 网络超时分为两种：请求超时和响应超时。请求超时是指客户端发送request到服务端过程超时，响应超时是指客户端在接收服务端respond数据过程超时。
+    - 模拟请求超时需要在chain.request()代码前面sleep时间，模拟响应超时需要在chain.proceed(request)代码之后sleep时间即可。
+- 如何模拟重定向或服务端异常
+    - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
+- 如何模拟弱网环境
+    - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
+
 
 
 #### 2.5 域名劫持分析
@@ -74,9 +84,8 @@
     - 准确性。LocalDNS 调度经常出现不准确，比如北京的用户调度到广东 IP，移动的运营商调度到电信的 IP，跨运营商调度会导致访问慢，甚至访问不了。
     - 及时性。运营商可能会修改 DNS 的 TTL，导致 DNS 修改生效延迟。不同运营商的服务实现不一致，我们也很难保证 DNS 解析的耗时。
 - 为了解决这些问题，就有了 HTTPDNS。
-    - 简单来说自己做域名解析的工作，通过 HTTP 请求后台去拿到域名对应的 IP 地址，直接解决上述所有问题。
-- 具体可以参考：
-    - [百度DNS优化](https://mp.weixin.qq.com/s/iaPtSF-twWz-AN66UJUBDg)
+    - 简单来说自己做域名解析的工作，通过 HTTP 请求后台去拿到域名对应的 IP 地址，直接解决上述所有问题。具体可以参考：[百度DNS优化](https://mp.weixin.qq.com/s/iaPtSF-twWz-AN66UJUBDg)
+
 
 
 #### 3.2 连接复用
