--- a/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
@@ -10,6 +10,7 @@
     - 2.3 轮训请求攻击
     - 2.4 弱网模拟分析
     - 2.5 域名劫持分析
+    - 2.6 数据劫持分析
 - 03.网络优化策略
     - 3.1 HTTPDNS优化
     - 3.2 连接复用
@@ -19,14 +20,13 @@
     - 3.6 Http2
 - 04.一些常见优化
     - 4.1 网络数据加密
-    - 4.2 
     - 4.6 图片网络优化
-    - 4.9 获取网络数据优化
+    - 4.9 网络数据优化
 - 05.如何衡量优化成果
     - 5.1 流量消耗分析
     - 5.2 异常率统计
     - 5.3 稳定性统计
-    - 
+
 
 
 ### 01.整体概述介绍
@@ -61,6 +61,7 @@
 #### 2.3 轮训请求攻击
 
 
+
 #### 2.4 弱网模拟分析
 - 如何开发模拟网络异常工具
     - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
@@ -75,6 +76,25 @@
 
 
 #### 2.5 域名劫持分析
+- 什么叫做域名劫持
+    - 指在劫持的网络范围内拦截域名解析的请求，分析请求的域名，返回假的IP地址或者什么都不做使请求失去响应，其效果就是对特定的网络不能访问或访问的是假网址。
+- 先说下域名劫持的现象
+    - 广告劫持：用户正常页面指向到广告页面。这个背景估计很多人遇到过……
+    - 恶意劫持：域名指向IP被改变，将用户访问流量引到挂马，盗号等对用户有害页面的劫持。
+    - local DNS缓存：为了降低跨网流量及用户访问速度进行的一种劫持，导致域名解析结果不能按时更新。
+- 域名劫持原因分析
+    - 缓存是DNS被劫持的根本原因，在DNS解析过程的各个缓存中均有可能被劫持。主要包括本机的hosts篡改劫持，和运营商的Local DNS劫持等。
+- 解决办法该怎么做
+    - 方案1：HttpDNS使用HTTP协议向DNS服务器的80端口进行请求，代替传统DNS协议向DNS服务器的53端口进行请求。也就是使用Http协议去进行DNS解析请求，将服务器返回的解析结果，直接向该IP发起对应的API服务请求，代替使用域名，域名解析请求直接发送到HTTPDNS服务器，绕过运营商Local DNS，避免域名劫持问题。
+    - 方案2：如果知道该域名的真实IP地址，则可以直接用此IP代替域名后进行访问。比如访问谷歌网站，可以把访问改为https://216.239.XX.XX/ ，从而绕开域名劫持。
+
+
+#### 2.6 数据劫持分析
+- 先说下数据劫持的现象
+    - 数据劫持针对明文传输的内容发生。用户发起HTTP请求，服务器返回页面内容时，经过中间的运营商网络，页面内容被篡改或加塞内容，强行插入弹窗或者广告。
+- 如何预防数据被劫持
+    - 解决方案：对内容进行HTTPS加密，实现密文传输，彻底避免劫持问题。
+
 
 
 ### 03.网络优化策略
@@ -111,6 +131,10 @@
 
 
 ### 04.一些常见优化
+#### 4.1 网络数据加密
+
+
+
 #### 4.6 图片网络优化
 - 比如我之前看到豆瓣接口，提供一种加载图片方式特别好。接口返回图片的数据有三种，一种是高清大图，一种是正常图片，一种是缩略小图。当用户处于wifi下给控件设置高清大图，当4g或者3g模式下加载正常图片，当弱网条件下加载缩略图【也称与加载图】。
 - 简单来说根据用户的当前的网络质量来判断下载什么质量的图片（电商用的比较多）。豆瓣开源接口可以参考一下！
@@ -119,8 +143,7 @@
 #### 4.7 弱网模拟优化
 
 
-#### 4.9 获取网络数据优化
-- 移动端获取网络数据优化的几个点
+#### 4.9 网络数据优化
 - 连接复用：节省连接建立时间，如开启 keep-alive。
     - 对于Android来说默认情况下HttpURLConnection和HttpClient都开启了keep-alive。只是2.2之前HttpURLConnection存在影响连接池的Bug，具体可见：Android HttpURLConnection及HttpClient选择
 - 请求合并：即将多个请求合并为一个进行请求，比较常见的就是网页中的CSS Image Sprites。如果某个页面内请求过多，也可以考虑做一定的请求合并。
