--- a/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
@@ -1,48 +1,45 @@
 #### 目录介绍
 - 01.卡顿基础介绍
-    - 1.1 项目背景
+    - 1.1 项目背景介绍
     - 1.2 遇到问题
     - 1.3 基础概念
     - 1.4 设计目标
     - 1.5 收益分析
-- 02.内存分析
+- 02.内存如何分析
     - 2.1 内存分析工具
     - 2.2 内存分析指标
     - 2.3 内存优化思路
-- 03.内存泄漏治理
+- 03.内存泄漏原理和根治
     - 3.1 什么是内存泄漏
+    - 3.2 内存为何会泄漏
     - 3.3 常见内存泄漏案例
-- 04.其他优化治理
+    - 3.4 内存捕获核心思想
+    - 3.5 内存泄漏引用链
+- 04.其他内存优化治理
+    - 4.1 代码层内存分析
+    - 4.2 
     - 4.7 ComponentCallback优化
     - 4.8 四种引用优化
     - 4.9 关于log日志
-- 方案设计
-    - 整体架构
-        - 架构设计图
-        - UML设计图
-    - 功能设计
-        - 关键流程图
-        - 接口设计图
-        - 模块间依赖关系
-- 其他设计（Optional）
-    - 性能设计
-    - 稳定性设计
-    - 灰度设计
-    - 降级设计
-    - 异常设计
-- 排期与计划
-    - 排期节点
-    - 落实反馈
+
 
 
 ### 01.卡顿基础介绍
-#### 1.1 项目背景
+#### 1.1 项目背景介绍
 - 内存治理背景
     - 在所有的App中，内存泄露问题一直存在，泄露或多或少而已，对于使用时间比较小的应用来说，即便存在内存泄露也没那么危险，因为出现OOM的概率较低，但是内存泄露问题对于长时间运行的App来说是致命的，如何解决内存泄露就是是我们工作的重点方向。
+- 稳定性很重要
+    - 对于工具类App来说，运行稳定很重要。
+
 
 
 #### 1.2 遇到问题
-
+- 内存衡量标准是什么？
+    - App内存可以用工具查看总的消耗内存，比如java内存，native内存。但衡量app内存是否健康的标准是什么，要建立一套
+- 内存怎么判断泄漏？
+- 内存没泄漏但过大原因是什么？
+- 内存泄漏如何去分析？
+- 内存优化实践和效率分析？
 
 
 #### 1.3 基础概念
@@ -56,7 +53,7 @@
 
 
 #### 1.4 设计目标
-- 对于以上问题，我们给出我们自己的解法吧，方案设计核心思路如下
+- 对于以上问题，给出我们自己的解法吧，方案设计核心思路如下
     - 建立线下内存自动化分析工具，解决过多的人力投入
     - 建立问题解决闭环机制，打通问题的发现、上报、处理、解决问题等多个链路，闭环解决问题
     - 建立内存泄露度量体现，数据和结果度量内存质量问题
@@ -65,7 +62,8 @@
 #### 1.5 收益分析
 
 
-### 02.内存分析
+
+### 02.内存如何分析
 #### 2.1 内存分析工具
 - Android最常见的是：Leakcanary
     - leakCanary是Square开源框架，是一个Android和Java的内存泄露检测库，如果检测到某个 activity 有内存泄露，LeakCanary 就是自动地显示一个通知，所以可以把它理解为傻瓜式的内存泄露检测工具。通过它可以大幅度减少开发中遇到的oom问题，大大提高APP的质量。
