--- a/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/13.内存治理优化实践.md
@@ -35,8 +35,9 @@
 
 #### 1.2 遇到问题
 - 内存衡量标准是什么？
-    - App内存可以用工具查看总的消耗内存，比如java内存，native内存。但衡量app内存是否健康的标准是什么，要建立一套
+    - App内存可以用工具查看总的消耗内存，比如java内存，native内存。但衡量app内存是否健康的标准是什么，要建立一套衡量准则……
 - 内存怎么判断泄漏？
+    - 因为内存泄漏是在堆内存中，所以对我们来说并不是可见的。通常我们可以借助MAT、LeakCanary等工具来检测应用程序是否存在内存泄漏。
 - 内存没泄漏但过大原因是什么？
 - 内存泄漏如何去分析？
 - 内存优化实践和效率分析？
@@ -81,9 +82,8 @@
 
 ### 03.内存泄漏治理
 #### 3.1 什么是内存泄漏
-- 对象没有跟着生命周期被回收
-    - 一些对象有着有限的声明周期，当这些对象所要做的事情完成了，我们希望它们会被垃圾回收器回收掉。
-    - 但是如果有一系列对这个对象的引用存在，那么在我们期待这个对象生命周期结束时被垃圾回收器回收的时候，它是不会被回收的。它还会占用内存，这就造成了内存泄露。持续累加，内存很快被耗尽。
+- 什么是内存泄漏
+    - 当一个对象已经不需要再使用本该被回收时，另外一个正在使用的对象持有它的引用从而导致它不能被回收，这导致本该被回收的对象不能被回收而停留在堆内存中，这就产生了内存泄漏。
 - 举一个内存泄漏案例
     - 比如：当Activity的onDestroy()方法被调用后，Activity以及它涉及到的View和相关的Bitmap都应该被回收掉。
     - 但是，如果有一个后台线程持有这个Activity的引用，那么该Activity所占用的内存就不能被回收，这最终将会导致内存耗尽引发OOM而让应用crash掉。
@@ -118,8 +118,7 @@
 - 解决线程内存泄漏方案
     - 想要避免因为 Thread 造成内存泄漏，可以在 Activity 退出后主动停止 Thread
 - 如果想保持Thread继续运行，可以按以下步骤来：
-    - 1.将线程改为静态内部类，切断Activity对于Thread的强引用
-    - 2.在线程内部采用弱引用保存Context引用，切断Thread对于Activity的强引用
+    - 1.将线程改为静态内部类，切断Activity对于Thread的强引用；2.在线程内部采用弱引用保存Context引用，切断Thread对于Activity的强引用
 
 
 
@@ -221,123 +220,19 @@
 
 #### 4.9 关于log日志
 - log 方法内存开销过大。建议这个方法 建议 Debug 进入执行 ，但是正是包不执行，因为 object 会进行字符串+拼接，产生大量内存对象。
-```
-public static void d(Object object){
-    //这个方法 建议 Debug 进入执行 ，但是正是包不执行，因为 object 会进行字符串+拼接，产生大量内存对象。
-    //Log.d(TAG, object.toString());
-    Log.d(TAG, " log : " + object);
-}
-```
-
-
-### 01.概述
-#### 1.1 项目背景
-- 通过简要的语言描述项目背景以及要达成的业务目标。
-
-#### 1.2 设计目标
-- 需求的背后往往会带来技术的重构/优化，或者单纯的完成需求，如果有必要，需要从技术角度给出方案设计的目标
-- 比如对于图片下载需求，需要完成相关的功能，那么设计目标主要有完成异步下载、存储、缓存设计、图片解码、渲染等功能。
-- 比如对于优化需求，目标可以是达到一个什么效果？可以是帧率的、Crash率的、卡顿的等。
-- 比如对于重构需求，目标可以是加强扩展、解决问题、提升效率等。
+    ``` java
+    public static void d(Object object){
+        //这个方法 建议 Debug 进入执行 ，但是正是包不执行，因为 object 会进行字符串+拼接，产生大量内存对象。
+        //Log.d(TAG, object.toString());
+        Log.d(TAG, " log : " + object);
+    }
+    ```
 
 
 
-### 02.方案设计
-- 方案设计是技术文档的最核心部分，主要包括了整体架构和功能设计，这里需要体现：
-- 设计的初衷：概要描述方案设计的思考，可以是为了扩展性的考虑，可以是提升性能
-关键技术点的思考：描述关键技术选型的思考，比如要解耦，业内解耦方案能有router、Target-Action等，讲清楚选择的思考
-- 技术上的折中/取舍：在做技术设计的时候，往往要的很多，但时间有限，那么这个需要讲一下折中与取舍，以及接下来的规划、计划
 
-
-
-#### 2.1 整体架构
-- 整体架构的组成需要有一张完成的架构设计图，描述清楚具体的分层以及层与层之间的关系
-- 比如传统的开发会分为三层，展示层、逻辑层、数据层
-    - 展示层的设计：视图的构成、视图间的耦合关系、具体的交互逻辑
-    - 逻辑层的设计：支撑展示层所需要的数据、从数据层获取数据的加工、业务相关逻辑（比如轮询服务）
-    - 数据层的设计：数据的获取方式以及存储方式，文件、数据库、本地、网络
-
-
-
-#### 2.2 功能设计
-- 功能设计包含但不限于以下几个部分：逻辑流程图、接口设计图、与外部的模块间依赖关系
-
-#### 2.2.1 关键流程图
-- 设计中的最复杂、最关键的逻辑需要画出流程图，实在画不出的流程图需要用语言描述清楚。
-- 关键流程需要有逻辑流程图，帮助其他同学理解功能的关键节点逻辑
-
-
-##### 2.2.2 接口设计图
-- 通过UML类图来展示类间关系，描述清楚接口设计的一些思考原则
-    - 提供的接口，往往接口设计为了完成相关逻辑
-
-
-
-##### 2.2.3 模块间依赖关系
-- 描述清楚和哪些模块存在依赖关系以及原因，比如首页依赖于购物车模块，需要解释清楚要强耦合，有没有办法解耦
-    - App内部模块间依赖
-    - App外部依赖
-
-
-#### 2.3 UI/动效设计
-- 客户端开发有很大一部分精力在UI/动效上，对于复杂的静态UI和复杂动效，需要给出实现方案和选型逻辑
-- 静态UI
-    - 只有复杂的UI才需要给出设计方案，例如核心页面大重构、复杂的协调布局等
-- 复杂动效
-    - 复杂的动效是端上容易踩坑的关键点，需要给出实现方案的对比、选型等，为验证动效可行性，可以给出动效Demo
-
-
-
-### 03.其他设计（Optional）
-- 以下部分是可选项，主要是从异常、兼容性、性能、稳定性、灰度、降级等维护来设计。
-
-
-#### 3.1 性能设计
-- 有些业务项目可能会考虑性能，比如列表页，卡顿、流畅度怎么样？如何评估？
-- 有些技术项目可能也会考虑性能，比如数据库设计，检索性能如何？是否有瓶颈，如何评估？
-
-
-#### 3.2 稳定性设计
-- 大的项目需要考虑性能如何保障？
-    - 比如方案 Review
-    - 比如自测Case Review，加强自测
-    - 比如单测
-
-
-#### 3.3 灰度设计
-- 核心关键功能需要有A/B设计
-- 比如UIWebview替换为WKWebview，其中存在很多不确定因素，需要做好灰度设计
-
-
-#### 3.4 降级设计
-- 在做一些新技术尝试时，需要考虑降级设计
-    - 比如RN、swift、weex引入对原有业务造成影响的，需要有兜底，可降级
-    - 参考资料
-    - 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
-
-
-#### 3.5 异常设计
-- 大部分业务需求都会涉及到异常处理，在关心主流程的同时需要关注异常场景怎么保证正确性？
-    - 比如用户操作中途退出、网络异常、数据被清理等
-
-
-#### 3.6 兼容性设计
-- 业务逻辑一般不会涉及到兼容性，但UI/动效需求容易遇到兼容性问题，也是提测时需要让QA关注的
-    - 比如独立端/嵌入端、高低版本API适配等
-
-
-### 04.排期与计划
-- 排期计划主要针对周期较长项目的时间补充，对于小型项目不需要，例如：
-    - 正常的版本业务需求，5pd以下，不需要给出排期计划；5pd或者以上，可以简单描述一下排期和提测时间
-    - 跨版本的大型业务需求、重构专项等，需要给出详细的排期计划
-    - 研发自驱的技术优化项目，需要给出详细的排期计划
-
-
-### 05.参考资料
-- 需要列出方案设计过程的文档，包括但不局限于PM需求文档，技术参考文档等。
-
-
-
+### 参考博客
+- App内存泄露测试方法总结：https://blog.csdn.net/wjky2014/article/details/119258886
 
 
 
