--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -54,8 +54,12 @@
 
 
 ### 4.工作经历
-#### 4.1 2020年4月份到现在
-- 负责滴滴RLab外卖骑手端App开发
+#### 4.1 2022年4月到至今
+- 负责**作业帮**智能硬件Android开发
+
+
+#### 4.2 2020年4月份到2022年3月份
+- 负责**滴滴**RLab外卖骑手端App开发
     - 1.对地图原生业务优化，主要是组件分化，极大解决类业务臃肿问题，不断完善，提高代码阅读性和可维护性。
     - 2.负责外卖骑手端App中地图模块，导航模块，行程模块等相关的业务。开发无延期，确保自测质量，线上事故<3全年。
     - 3.落地针对地图，导航，奖励，定位等模块转向flutter技术改造，定义两端交互通信接口，拉起Android和iOS交互逻辑。
@@ -63,8 +67,8 @@
 
 
 
-#### 4.2 2018年7月到2020年3月
-- 负责大搜车旗下一鹿有车项目开发迭代【从0到1，百万级应用】
+#### 4.3 2018年7月到2020年3月
+- 负责**大搜车**旗下一鹿有车项目开发迭代【从0到1，百万级应用】
 - 一鹿有车Android开发经历
     - 1.重构项目，主导进行MVP架构的更改，以及技术选型方案的商讨和制定。封装公共组件和基础base类，统一项目中弹窗，页面状态管理切换，网络请求等。
     - 2.承接app中首页，视频，选车，详情，h5等多个模块业务开发。对于模仿易车，懂车帝，汽车之家等app，致敬对手app，确定技术方案，以及和服务端确定实践方案。
@@ -76,7 +80,7 @@
 
 
 
-#### 4.3 2015年9月到2018年7月
+#### 4.4 2015年9月到2018年7月
 - 工作阶段
     - 第一阶段：投资界NWD部门(15年9月-17年11月)，对于投资界App(新闻类)，负责代码架构优化，迭代；对于新芽App(资讯工具类)，负责新芽客户端独立开发工作。
     - 第二阶段：清科创业IMC部分(17年11月-18年7月)，负责开发沙丘大学App(知识付费视频播放类)。
