--- a/Read/ReadMeWiki/00.方案实践/25.LeakCanary内存收集.md
+++ b/Read/ReadMeWiki/00.方案实践/25.LeakCanary内存收集.md
@@ -1,15 +1,15 @@
 #### 目录介绍
-- 01.整体概述
+- 01.整体概述介绍
     - 1.1 项目背景
     - 1.2 遇到问题
     - 1.3 工作机制
     - 1.4 设计目标
     - 1.5 产生收益
 - 02.LeakCanary原理
-    - 2.1 思考一些问题
-    - 2.2 原理流程概括
+    - 2.1 要思考一些问题
+    - 2.2 原理流程的概括
     - 2.3 涉及知识点说明
-    - 2.4 install初始化
+    - 2.4 关于引用
 - 03.开发实践思路
     - 3.1 
 - 05.方案基础设计
@@ -26,17 +26,21 @@
     - 6.5 异常设计
 
 
+### 01.整体概述介绍
+#### 1.1 项目背景
 
+
+#### 1.2 遇到问题
 
 
 #### 1.3 工作机制
-1、RefWatcher.watch() 创建一个 KeyedWeakReference 到要被监控的对象。
-2、然后在后台线程检查引用是否被清除，如果没有，调用GC。
-3、如果引用还是未被清除，把 heap 内存 dump 到 APP 对应的文件系统中的一个 .hprof 文件中。
-4、在另外一个进程中的 HeapAnalyzerService 有一个 HeapAnalyzer 使用HAHA 解析这个文件。
-5、得益于唯一的 reference key, HeapAnalyzer 找到 KeyedWeakReference，定位内存泄露。
-6、HeapAnalyzer 计算 到 GC roots 的最短强引用路径，并确定是否是泄露。如果是的话，建立导致泄露的引用链。
-7、引用链传递到 APP 进程中的 DisplayLeakService， 并以通知的形式展示出来。
+- 1、RefWatcher.watch() 创建一个 KeyedWeakReference 到要被监控的对象。
+- 2、然后在后台线程检查引用是否被清除，如果没有，调用GC。
+- 3、如果引用还是未被清除，把 heap 内存 dump 到 APP 对应的文件系统中的一个 .hprof 文件中。
+- 4、在另外一个进程中的 HeapAnalyzerService 有一个 HeapAnalyzer 使用HAHA 解析这个文件。
+- 5、得益于唯一的 reference key, HeapAnalyzer 找到 KeyedWeakReference，定位内存泄露。
+- 6、HeapAnalyzer 计算 到 GC roots 的最短强引用路径，并确定是否是泄露。如果是的话，建立导致泄露的引用链。
+- 7、引用链传递到 APP 进程中的 DisplayLeakService， 并以通知的形式展示出来。
 
 
 
