feat：隐私合规优化

--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -8,6 +8,7 @@
     - 2.1 隐私合规是什么
     - 2.2 为何做隐私合规
     - 2.3 隐私合规政策案例
+    - 2.4 为何做权限合规
 - 04.隐私合规检测
     - 4.1 违规收集个人信息
     - 4.2 超范围收集个人信息
@@ -21,6 +22,7 @@
     - 5.4 敏感信息控频
     - 5.5 隐私协议声明
     - 5.6 敏感权限实践
+    - 5.7 底层依赖库权限说明
 - 06.合规测试检查重点
     - 6.1 合规处理优先级
     - 6.2 QA测试检查重点
@@ -81,6 +83,13 @@
 
 
 
+#### 2.4 为何做权限合规
+- 首先权限合规有两大点
+    - 第一点：那里使用到了权限就在那里申请；第二点：使用权限的时候需要弹窗说明该权限的用途。
+- 列举一下我实践案例中的权限合规梳理
+    - ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/75dde4c005d24983a5241cf33df77dee~tplv-k3u1fbpfcp-watermark.image?)
+
+
 ### 04.隐私合规检测
 #### 4.1 违规收集个人信息
 - 场景说明：
@@ -103,8 +112,6 @@
 - 客户端如何做？
     - 举个例子，App在同意隐私政策前，不会收集android_id。在同意隐私政策后，有采集行为，但是4分钟采集了12次，则会认为过于频繁。
     - App修复该问题，可以统一管理敏感信息采集入口，缓存敏感信息数据，可以设定缓存过期时间(建议设置超过5分钟)。获取android_id，缓存下来，下次调用先拿缓存，避免频繁调用系统api。
-
-
 
 
 #### 4.3 违规使用个人信息
@@ -163,7 +170,6 @@
 
 
 #### 5.2 工具检测隐私API
-- 方案的选择和比较如下：
 - 方案1：Xposed
     - 如果你对Xposed比较熟悉，并且手头有个root的设备安装了Xposed框架，那么直接开发一个Xposed模块来hook指定方法就可以了。缺点是需要root权限……
 - 方案2：VirtualXposed
@@ -199,7 +205,8 @@
     - 在应用运行时记录每次触发隐私行为的时间点和调用链信息，根据触发时间来判断该隐私行为是否过量执行，根据调用链信息来辅助判断具体是哪一块业务需要来获取隐私数据。
 - 当检测到了风险函数调用情况，则需要知道该函数是在哪里调用的？这个该怎么做呢？
     - 获取当前线程，然后通过线程获取stackTraces，再然后遍历打印即可。根据堆栈信息，可以看到调用链的类名，方法名称，代码行数等。
-
+- 关于针对运行期检查隐私合规api调用
+    - 具体可以看：[MonitorPrivacy](https://github.com/yangchong211/YCAppTool/tree/master/MonitorLib/MonitorPrivacy)
 
 
 #### 5.3 工具检测权限
@@ -236,6 +243,7 @@
         return androidId;
     }
     ```
+- 具体的方案可以看这个依赖库：[PrivateServer](https://github.com/yangchong211/YCAppTool/tree/master/ServerLib/PrivateServer)
 
 
 
@@ -245,11 +253,12 @@
     - app申请权限及目的在隐私协议中声明
     - 集成的所有第三方sdk及第三方sdk收集个人信息的用户需要在隐私协议中声明；包括检测机构检测出来的+三方sdk隐私协议中声明的
     - 在隐私协议中声明，app及三方sdk在静默和后台也会收集个人信息
-
+- 针对危险权限，需要在隐私协议中说明一下。具体如下所示：
+    - ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9b078bb6364949b88a8826ab28dc7668~tplv-k3u1fbpfcp-watermark.image?)
 
 
 #### 5.6 敏感权限实践
-- 敏感权限。如下所示，频繁读取敏感权限也会
+- 敏感权限。如下所示，频繁读取敏感权限也会触发合规
     ``` java
     android.permission.READ_CALL_LOG：读取通话记录
     android.permission.WRITE_CALL_LOG：写通话记录
@@ -261,6 +270,15 @@
     android.permission.RECEIVE_SMS：接受收短信
     android.permission.READ_SMS：读取短信
     ```
+
+
+#### 5.7 底层依赖库权限说明
+- 针对申请隐私权限需要弹窗说明
+    - 比如以前可以在app启动的时候，一下子申请完所有权限。但是这种已经不符合规范了，要求必须在使用的时候申请权限，并且要有弹窗说明。一句话概括为那里使用那里申请权限！
+- 举一个例子加深理解
+    - 比如你有一个二维码扫描库，你在扫描的时候需要申请相机权限，并且先要弹出弹窗说明文案；比如你有个相册库，你在打开相册的时候，需要申请读写权限。
+- 二维码库和相册库已经自己申请权限，如何复用壳工程中的权限说明弹窗？
+    - 具体方案：采用接口隔离，具体的实现类放到壳工程中实现。具体可以看看我的这个基础空间通用接口库：[EventUploadLib](https://github.com/yangchong211/YCAppTool/tree/master/CommonLib/EventUploadLib)
 
 
 
