--- a/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
+++ b/Read/ReadMeWiki/01.大型方案/23.隐私合规优化实践.md
@@ -1,3 +1,4 @@
+# 隐私合规综合实践
 #### 目录介绍
 - 01.整体概述介绍
     - 1.1 遇到问题说明
@@ -31,6 +32,7 @@
     - 6.5 隐私协议筛查
 - 07.其他说明介绍
     - 7.1 参考博客链接
+    - 7.2 相关demo链接
 
 
 
@@ -39,6 +41,9 @@
 - 国内对应用程序安全隐私问题监管变的越来越严格。各个应用市场对APP上架也有比较严格的检查。出现隐私合规安全问题主要有哪些呢？
     - 在用户同意隐私协议之前，不能有收集用户隐私数据的行为。例如，在用户同意之前不能去获取 Android ID、Device ID、MAC 等隐私数据
     - 在用户同意隐私协议之后，搜集用户隐私数据的行为不能超出实现服务场景所必需的最低频率。例如，某些应用会在每次网络请求时将当前设备的 Android ID 作为 header 一起上报，如果没有对 Android ID 进行缓存处理的话，搜集该数据的行为频率就会非常高，此时一样存在隐私合规问题。
+- 工信部隐私合规说明
+    - 具体可以看一下这篇文档：[工信部隐私合规文档](https://github.com/yangchong211/YCAppTool/blob/master/MonitorLib/MonitorPrivacy/01.%E5%B7%A5%E4%BF%A1%E9%83%A8%E9%9A%90%E7%A7%81%E5%90%88%E8%A7%84.md)
+
 
 
 #### 1.2 项目背景
@@ -203,6 +208,7 @@
     - 在代码中如果有地方调用 TelephonyManager.getDeviceId 的，都会被 epic 的 beforeHookedMethod 给拦截到，只需要在 beforeHookedMethod 打印出堆栈即可看到是谁调用的。
 - 为何打印堆栈信息
     - 在应用运行时记录每次触发隐私行为的时间点和调用链信息，根据触发时间来判断该隐私行为是否过量执行，根据调用链信息来辅助判断具体是哪一块业务需要来获取隐私数据。
+    - ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9e2230f7fdbe4ffdb09b8560b949f1a1~tplv-k3u1fbpfcp-watermark.image?)
 - 当检测到了风险函数调用情况，则需要知道该函数是在哪里调用的？这个该怎么做呢？
     - 获取当前线程，然后通过线程获取stackTraces，再然后遍历打印即可。根据堆栈信息，可以看到调用链的类名，方法名称，代码行数等。
 - 关于针对运行期检查隐私合规api调用
@@ -336,28 +342,16 @@
     - 新增三方sdk或开源库，有收集个人信息或者权限的 必须在隐私政策里申明（找产品和法务）；没收集个人信息或者权限的三方库或者自有库，确定好后将sdk包名和中文名称备注一下。
 
 
-
-### 08.其他说明介绍
-#### 8.1 参考博客链接
+### 07.其他说明介绍
+#### 7.1 参考博客链接
 - 腾讯隐私政策审核规范
     - https://wikinew.open.qq.com/index.html#/iwiki/875339652
 - 腾讯隐私政策整改方法
     - https://wikinew.open.qq.com/index.html#/iwiki/886144166
-- 利用Xposed工具检测隐私api调用
-    - https://github.com/ChenJunsen/Hegui3.0
-- 用户隐私安全规划
-    - https://wiki.zuoyebang.cc/pages/viewpage.action?pageId=319020634
-- epic是weishu大神开源的一个Hook框架，支持ART上的Java方法HOOK。
-    - epic相当于ART上的Dexposed，所以也是Xposed-Style Method Hook。
-- http://www.45fan.com/article.php?aid=1yyCmAXXM31pnFuG
-- Android 隐私合规静态检查
-    - https://mp.weixin.qq.com/s/U06HZb1P5Z2bK_ibtJk9KA
-    - https://juejin.cn/post/7046269884207988744
-- 隐私权限整理笔记：https://blog.csdn.net/zjy764219923/article/details/123559789
 
 
-
-
+#### 7.2 相关demo链接
+##### [隐私合规demo](https://github.com/yangchong211/YCAppTool)
 
 
 
