--- a/Read/ReadShareWiki/04.执行策略/02.有效学习这件事.md
+++ b/Read/ReadShareWiki/04.执行策略/02.有效学习这件事.md
@@ -5,17 +5,19 @@
 - 04.学习后付诸实践
 - 05.避免被过多干扰
 - 06.学习必须有产出
-- 07.形成良好的循环
+- 07.零碎学习可记录
 
 
 
 ### 01.为何说有效学习
+- 现实结果是最好的“评判师”，如果学习不能让自己发生真正的改变，那学再多又有什么用呢？懂得百点不如改变一点。
+- 你根本不用在意自己读后记住了多少内容，即使整本书都记不起来了也没关系，只要有一个点触动了自己，并让自己发生了真实的改变，这本书就没有白读，这次阅读就是有效的。
+- 有效学习核心在于，真正的成长不在于自己懂得了多少道理，而在于自己真正改变了多少。学习就是把新知识关联到旧的知识体系中，然后再通过刻意练习将链接处的地方进行深度缝合。
 
 
 
 ### 02.要有学习的意愿
 - 要有学习的意愿。如果你自己压根就不想学习，那说再多也没用。毕竟现在没有老师、家长在旁边看着，外界又有那么多诱惑。成年人的学习，靠的就是自驱力。
-
 
 
 ### 03.明确学习的目标
@@ -40,7 +42,9 @@
 - 一定要产出一些作品，比解决了一个工作中的技术难题，你也可以把自己的学习过程中的思考写下来分享出去，还可以以教代学，把自己学习到的东西教给别人，看看能不能教得会。教学相长，就是这个道理。
 
 
-
+### 07.零碎学习可记录
+- 零碎的网点，只需学习那些让你深深触动的知识，尝试去打碎各家的知识体系，只取其中最触动自己的点或块，然后将其拼接成自己的知识网络。
+- 当你在阅读一句或一段话产生了关联思考🤔的时候，一定要立马把它记下来，这些才是真正能被你吸收的精华。然后利用费曼技巧，通过自己的语言，用最简单的话把一件事情讲清楚，让外行人也能听懂。
 
 
 
